// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneNumberField applies theming 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      [
        {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      keyboardType="phone-pad"
      placeholderTextColor="hsl(210, 10%, 40%)"
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          [
            {},
            undefined,
          ],
        ]
      }
      testID="phoneNumberInput"
    />
  </View>
</View>
`;

exports[`PhoneNumberField renders as expected 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      [
        {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      keyboardType="phone-pad"
      placeholderTextColor="hsl(210, 10%, 40%)"
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          [
            {},
            undefined,
          ],
        ]
      }
      testID="phoneNumberInput"
    />
  </View>
</View>
`;

exports[`PhoneNumberField renders as expected when disabled 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      [
        {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "opacity": 0.6,
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": true,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={false}
      keyboardType="phone-pad"
      placeholderTextColor="hsl(210, 10%, 40%)"
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          [
            {},
            undefined,
          ],
        ]
      }
      testID="phoneNumberInput"
    />
  </View>
</View>
`;
